# mbb

./: .gitignore  LICENSE  README.md  mbb.py  mbb_funcs.py  pyproject.toml  requirements.txt  run_all_tests.py  test_bayes_mbb.py
.github/workflows/: mbb-test.yml  python-package.yml
docs/: conf.py  index.rst  mbb.rst  mbb_funcs.rst  quickstart.rst  requirements.txt
docs/_build/: requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  mbb.doctree  mbb_funcs.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  mbb.html  mbb_funcs.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst  index.rst.txt  mbb.rst  mbb.rst.txt  mbb_funcs.rst
mbb/: __init__.py  mbb.py  mbb_funcs.py
mbb.egg-info/: PKG-INFO  SOURCES.txt
mbb_model/: mbb.py  mbb_funcs.py
mbb_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: sandbox.py  test_basics.py  test_lir.py  test_new_functions.py  test_performance.py  test_pickle.py  test_piecewise.py  test_plotting.py  test_posterior_priors.py  testmbb.py  utils.py
