[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbb"
version = "0.6.0"
readme = "README.md"
description = "Implementation of a modified blackbody (MBB) model, used for fitting the spectral energy distributions of dusty galaxies."
authors = [
  { name="Stephen McKay", email="sjmckay12@gmail.com" },
]

dependencies = [
"matplotlib",
"astropy",
"numpy",
"scipy",
"emcee",
"corner",
"tqdm"
]


